// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs <CheckCog /> With additional props Checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <label
    className="title"
    htmlFor="MOCK ID"
  >
    <span
      className="text-content"
    >
      MOCK TITLE
    </span>
    <span
      className="is-required"
    >
      *
    </span>
    <span
      className="is-disabled"
    >
      *
    </span>
    <span
      className="is-readonly"
    >
      *
    </span>
  </label>
  <span
    className="description"
  >
    <span
      className="text-content"
    >
      MOCK DESCRIPTION
    </span>
  </span>
  <span
    className="error-message"
  >
    <span
      className="text-content"
    >
      Unknown
    </span>
  </span>
  <input
    accessKey="MOCK ACCESS KEY"
    className="input"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    readOnly={true}
    required={true}
    tabIndex={1}
    value="MOCK VALUE"
  />
</div>
`;

exports[`#cogs/cogs <CheckCog /> With additional props Default checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <label
    className="title"
    htmlFor="MOCK ID"
  >
    <span
      className="text-content"
    >
      MOCK TITLE
    </span>
    <span
      className="is-required"
    >
      *
    </span>
    <span
      className="is-disabled"
    >
      *
    </span>
    <span
      className="is-readonly"
    >
      *
    </span>
  </label>
  <span
    className="description"
  >
    <span
      className="text-content"
    >
      MOCK DESCRIPTION
    </span>
  </span>
  <span
    className="error-message"
  >
    <span
      className="text-content"
    >
      Unknown
    </span>
  </span>
  <input
    accessKey="MOCK ACCESS KEY"
    className="input"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    readOnly={true}
    required={true}
    tabIndex={1}
    value="MOCK VALUE"
  />
</div>
`;

exports[`#cogs/cogs <CheckCog /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <input
    className="input"
    disabled={false}
    id="MOCK NAME"
    name="MOCK NAME"
    onChange={[Function]}
    readOnly={false}
    required={false}
    value="MOCK VALUE"
  />
</div>
`;

exports[`#cogs/cogs <ValueCog /> With additional props Default value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <label
    className="title"
    htmlFor="MOCK ID"
  >
    <span
      className="text-content"
    >
      MOCK TITLE
    </span>
    <span
      className="is-required"
    >
      *
    </span>
    <span
      className="is-disabled"
    >
      *
    </span>
    <span
      className="is-readonly"
    >
      *
    </span>
  </label>
  <span
    className="description"
  >
    <span
      className="text-content"
    >
      MOCK DESCRIPTION
    </span>
  </span>
  <span
    className="error-message"
  >
    <span
      className="text-content"
    >
      Unknown
    </span>
  </span>
  <input
    accessKey="MOCK ACCESS KEY"
    className="input"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    placeholder="MOCK PLACEHOLDER"
    readOnly={true}
    required={true}
    tabIndex={1}
  />
</div>
`;

exports[`#cogs/cogs <ValueCog /> With additional props Value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <label
    className="title"
    htmlFor="MOCK ID"
  >
    <span
      className="text-content"
    >
      MOCK TITLE
    </span>
    <span
      className="is-required"
    >
      *
    </span>
    <span
      className="is-disabled"
    >
      *
    </span>
    <span
      className="is-readonly"
    >
      *
    </span>
  </label>
  <span
    className="description"
  >
    <span
      className="text-content"
    >
      MOCK DESCRIPTION
    </span>
  </span>
  <span
    className="error-message"
  >
    <span
      className="text-content"
    >
      Unknown
    </span>
  </span>
  <input
    accessKey="MOCK ACCESS KEY"
    className="input"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    placeholder="MOCK PLACEHOLDER"
    readOnly={true}
    required={true}
    tabIndex={1}
    value="MOCK VALUE"
  />
</div>
`;

exports[`#cogs/cogs <ValueCog /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <input
    className="input"
    disabled={false}
    id="MOCK NAME"
    name="MOCK NAME"
    onChange={[Function]}
    readOnly={false}
    required={false}
  />
</div>
`;
